add app store mention & refactor the order of features

--- a/land0/index.html
+++ b/land0/index.html
@@ -646,7 +646,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Stop Guessing.<br>Build What Users Already Proved They Want.</h1>
-                <p class="subheadline">Select competitor apps and get comprehensive review analysis: CSV exports, sentiment analysis, trend identification, gap discovery, and actionable insights to inform your product roadmap.</p>
+                <p class="subheadline">Select competitor apps and get comprehensive review analysis: sentiment analysis, trend identification, gap discovery, and actionable insights to inform your product roadmap. Plus CSV exports with all reviews.</p>
                 
                 <form class="email-form" name="early-access-hero" netlify netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <p class="hidden">
@@ -717,7 +717,7 @@
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3>Get Your Analysis</h3>
-                    <p>Receive CSV files with all reviews, sentiment analysis, trend insights, gap opportunities, and UX patterns</p>
+                    <p>Receive sentiment analysis, trend insights, gap opportunities, and UX patterns. Plus CSV exports with all reviews</p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
@@ -737,13 +737,6 @@
             </div>
 
             <div class="value-grid">
-                <div class="value-card">
-                    <h3>
-                        <div class="value-icon">📄</div>
-                        Complete Review Data Export
-                    </h3>
-                    <p>Get a CSV file with all review texts from your selected competitor apps. Export, analyze, and share the raw data with your team.</p>
-                </div>
                 <div class="value-card">
                     <h3>
                         <div class="value-icon">😊</div>
@@ -792,6 +785,13 @@
                         Instant Actionable Insights
                     </h3>
                     <p>What takes 6 months of user research, delivered in 30 minutes. Get comprehensive analysis while your competitors are still planning surveys.</p>
+                </div>
+                <div class="value-card">
+                    <h3>
+                        <div class="value-icon">📄</div>
+                        Complete Review Data Export
+                    </h3>
+                    <p>Get a CSV file with all review texts from your selected competitor apps. Export, analyze, and share the raw data with your team.</p>
                 </div>
             </div>
         </div>
