--- a/land1/index.html
+++ b/land1/index.html
@@ -646,7 +646,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Stop Guessing.<br>Build What Users Already Proved They Want.</h1>
-                <p class="subheadline">Select competitor apps and get comprehensive review analysis: CSV exports, sentiment analysis, trend identification, gap discovery, and actionable insights to inform your product roadmap.</p>
+                <p class="subheadline">Select competitor apps from the App Store and get comprehensive analysis of their App Store reviews: sentiment analysis, trend identification, gap discovery, and actionable insights to inform your product roadmap. Plus CSV exports for your own further analysis.</p>
                 
                 <form class="email-form" name="early-access-hero" netlify netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <p class="hidden">
@@ -676,32 +676,32 @@
                 <div class="pain-point">
                     <div class="pain-icon">⏱️</div>
                     <h3>Months Building Features Nobody Wants</h3>
-                    <p>You spend months developing features, then discover users don't actually need them. Instead of guessing, see what users really write about competitor apps.</p>
+                    <p>You spend months developing features, then discover users don't actually need them. Instead of guessing, see what users really write in App Store reviews about competitor apps. We analyze thousands of real App Store reviews to reveal what users actually want.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">🎭</div>
                     <h3>User Interviews Don't Tell the Truth</h3>
-                    <p>People say what they think you want to hear, not what they actually do. You need real insights that lead to payment, and you need them fast. App reviews reveal what users really value.</p>
+                    <p>People say what they think you want to hear, not what they actually do. You need real insights that lead to payment, and you need them fast. App Store reviews reveal what users really value - we analyze these reviews to give you authentic user feedback.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">📊</div>
                     <h3>Manual Analysis Takes Months</h3>
-                    <p>Reading thousands of reviews manually and finding patterns takes months of work. You need insights now, not in 6 months.</p>
+                    <p>Reading thousands of App Store reviews manually and finding patterns takes months of work. You need insights now, not in 6 months. We automate the analysis of App Store reviews so you get actionable insights in minutes.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">💡</div>
                     <h3>Roadmap Based on Intuition, Not Data</h3>
-                    <p>Product managers often choose features based on gut feeling or company politics. You need real data about what people actually ask for and need.</p>
+                    <p>Product managers often choose features based on gut feeling or company politics. You need real data from App Store reviews about what people actually ask for and need.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">🔍</div>
                     <h3>Market Gaps Go Unnoticed</h3>
-                    <p>When all competitors fail to solve a problem, you only see it by systematically analyzing reviews. These gaps are your competitive advantage.</p>
+                    <p>When all competitors fail to solve a problem, you only see it by systematically analyzing App Store reviews. These gaps are your competitive advantage.</p>
                 </div>
             </div>
 
             <div class="pull-quote">
-                "Why build blindly when you can validate your ideas by analyzing what users say about apps in your category?"
+                "Why build blindly when you can validate your ideas by analyzing App Store reviews from apps in your category?"
             </div>
         </div>
     </section>
@@ -711,19 +711,19 @@
         <div class="container">
             <div class="section-header">
                 <h2>Validate Before You Build</h2>
-                <p style="color: var(--text-secondary); font-size: 18px; margin-top: 15px;">This service helps you validate what users say about other apps in your category</p>
+                <p style="color: var(--text-secondary); font-size: 18px; margin-top: 15px;">We analyze App Store reviews from competitor apps in your category to reveal what users really want</p>
             </div>
 
             <div class="steps-container">
                 <div class="step">
                     <div class="step-number">1</div>
                     <h3>Select Competitor Apps</h3>
-                    <p>Choose apps in your category that you want to analyze</p>
+                    <p>Choose apps from the App Store in your category that you want to analyze</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3>Get Analysis in 30 Minutes</h3>
-                    <p>Receive comprehensive analysis: all reviews in CSV, sentiment analysis, trends, gaps, and actionable insights</p>
+                    <p>Receive comprehensive analysis of App Store reviews: sentiment analysis, trends, gaps, and actionable insights. Plus a CSV file with all reviews for your own further analysis.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
@@ -739,58 +739,51 @@
         <div class="container">
             <div class="section-header">
                 <h2>What You Get After Selecting Competitor Apps</h2>
-                <p style="color: var(--text-secondary); font-size: 18px; margin-top: 15px;">Comprehensive analysis and actionable insights to inform your product strategy</p>
+                <p style="color: var(--text-secondary); font-size: 18px; margin-top: 15px;">Comprehensive analysis of App Store reviews with actionable insights to inform your product strategy</p>
             </div>
 
             <div class="value-grid">
                 <div class="value-card">
                     <h3>
-                        <div class="value-icon">📄</div>
-                        Complete Review Data Export
-                    </h3>
-                    <p>Get a CSV file with all review texts from your selected competitor apps. Export, analyze, and share the raw data with your team.</p>
-                </div>
-                <div class="value-card">
-                    <h3>
                         <div class="value-icon">😊</div>
                         Sentiment Analysis
                     </h3>
-                    <p>Automatically categorized reviews into positive and negative sentiment. Quickly understand what users love and what frustrates them across competitor apps.</p>
+                    <p>Automatically categorized App Store reviews into positive and negative sentiment. Quickly understand what users love and what frustrates them across competitor apps.</p>
                 </div>
                 <div class="value-card">
                     <h3>
                         <div class="value-icon">📊</div>
                         Trend Identification
                     </h3>
-                    <p>Identify common themes across reviews. Discover frequently mentioned features, UI elements, and pain points that matter most to users in your category.</p>
+                    <p>Identify common themes across App Store reviews. Discover frequently mentioned features, UI elements, and pain points that matter most to users in your category.</p>
                 </div>
                 <div class="value-card">
                     <h3>
                         <div class="value-icon">🔎</div>
                         Gap Discovery
                     </h3>
-                    <p>Find features mentioned in competitor reviews that your app currently lacks. Turn market gaps into your competitive advantage and unique selling proposition.</p>
+                    <p>Find features mentioned in competitor App Store reviews that your app currently lacks. Turn market gaps into your competitive advantage and unique selling proposition.</p>
                 </div>
                 <div class="value-card">
                     <h3>
                         <div class="value-icon">🎯</div>
                         Pain Point Analysis
                     </h3>
-                    <p>Identify features that users complain about in competitor apps. Solving these pain points can give you a competitive edge and win over frustrated users.</p>
+                    <p>Identify features that users complain about in competitor apps' App Store reviews. Solving these pain points can give you a competitive edge and win over frustrated users.</p>
                 </div>
                 <div class="value-card">
                     <h3>
                         <div class="value-icon">💡</div>
                         Feature Request Insights
                     </h3>
-                    <p>Discover reviews where users are asking for new features or improvements. This can directly inform your product roadmap with validated demand.</p>
+                    <p>Discover App Store reviews where users are asking for new features or improvements. This can directly inform your product roadmap with validated demand.</p>
                 </div>
                 <div class="value-card">
                     <h3>
                         <div class="value-icon">🎨</div>
                         UX Pattern Recognition
                     </h3>
-                    <p>Even without direct feature mentions, reviews reveal UX insights. Understand user feedback on navigation, design, and overall ease of use patterns.</p>
+                    <p>Even without direct feature mentions, App Store reviews reveal UX insights. Understand user feedback on navigation, design, and overall ease of use patterns.</p>
                 </div>
                 <div class="value-card">
                     <h3>
@@ -798,6 +791,13 @@
                         Instant Actionable Insights
                     </h3>
                     <p>What takes 6 months of user research, delivered in 30 minutes. Get comprehensive analysis while your competitors are still planning surveys.</p>
+                </div>
+                <div class="value-card">
+                    <h3>
+                        <div class="value-icon">📄</div>
+                        Complete Review Data Export
+                    </h3>
+                    <p>Get a CSV file with all App Store review texts from your selected competitor apps. Export, analyze, and share the raw data with your team.</p>
                 </div>
             </div>
         </div>
@@ -813,7 +813,7 @@
             <div class="usecase-grid">
                 <div class="usecase-card">
                     <h3>🚀 Pre-Launch Validation</h3>
-                    <p>Building a new app in fitness, dating, productivity? See the patterns before you code. Understand what works and what doesn't in your category.</p>
+                    <p>Building a new app in fitness, dating, productivity? Analyze App Store reviews before you code. Understand what works and what doesn't in your category.</p>
                 </div>
                 <div class="usecase-card">
                     <h3>🎯 Strategic Pivots</h3>
@@ -821,11 +821,11 @@
                 </div>
                 <div class="usecase-card">
                     <h3>🕵️ Competitive Intelligence</h3>
-                    <p>Need to know what users hate about your competitors? We decode it all. Transform their weaknesses into your strengths.</p>
+                    <p>Need to know what users hate about your competitors? We analyze their App Store reviews and decode it all. Transform their weaknesses into your strengths.</p>
                 </div>
                 <div class="usecase-card">
                     <h3>📈 Feature Prioritization</h3>
-                    <p>Struggling to decide what to build next? Let real user demand guide your roadmap. Build features users are actively requesting, not guessing.</p>
+                    <p>Struggling to decide what to build next? Let App Store reviews guide your roadmap. Build features users are actively requesting, not guessing.</p>
                 </div>
             </div>
         </div>
@@ -836,7 +836,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Your Competitors Already Did the User Research.</h2>
-                <p class="subheader">We Help You Learn From It.</p>
+                <p class="subheader">We Help You Learn From Their App Store Reviews.</p>
                 
                 <div class="email-capture">
                     <form method="POST" class="email-form" name="early-access-cta" netlify netlify-honeypot="bot-field" data-netlify="true">
