make land1 less wordy

--- a/land1/index.html
+++ b/land1/index.html
@@ -676,32 +676,32 @@
                 <div class="pain-point">
                     <div class="pain-icon">⏱️</div>
                     <h3>Months Building Features Nobody Wants</h3>
-                    <p>You spend months developing features, then discover users don't actually need them. Instead of guessing, see what users really write in App Store reviews about competitor apps. We analyze thousands of real App Store reviews to reveal what users actually want.</p>
+                    <p>You spend months building features users don't need. We analyze competitor App Store reviews to reveal what users actually want.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">🎭</div>
                     <h3>User Interviews Don't Tell the Truth</h3>
-                    <p>People say what they think you want to hear, not what they actually do. You need real insights that lead to payment, and you need them fast. App Store reviews reveal what users really value - we analyze these reviews to give you authentic user feedback.</p>
+                    <p>User interviews lie. App Store reviews don't. We analyze competitor reviews to reveal what users actually value.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">📊</div>
                     <h3>Manual Analysis Takes Months</h3>
-                    <p>Reading thousands of App Store reviews manually and finding patterns takes months of work. You need insights now, not in 6 months. We automate the analysis of App Store reviews so you get actionable insights in minutes.</p>
+                    <p>Reading thousands of App Store reviews takes months. We automate it—get actionable insights in minutes.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">💡</div>
                     <h3>Roadmap Based on Intuition, Not Data</h3>
-                    <p>Product managers often choose features based on gut feeling or company politics. You need real data from App Store reviews about what people actually ask for and need.</p>
+                    <p>Features chosen by gut feeling, not data. Use App Store review data to see what users actually request.</p>
                 </div>
                 <div class="pain-point">
                     <div class="pain-icon">🔍</div>
                     <h3>Market Gaps Go Unnoticed</h3>
-                    <p>When all competitors fail to solve a problem, you only see it by systematically analyzing App Store reviews. These gaps are your competitive advantage.</p>
+                    <p>Find market gaps competitors miss. These are your competitive advantage.</p>
                 </div>
             </div>
 
             <div class="pull-quote">
-                "Why build blindly when you can validate your ideas by analyzing App Store reviews from apps in your category?"
+                "Why build blindly when you can validate your ideas by analyzing competitor reviews?"
             </div>
         </div>
     </section>
