--- a/land1/index.html
+++ b/land1/index.html
@@ -762,7 +762,7 @@
                         <div class="value-icon">🔎</div>
                         Gap Discovery
                     </h3>
-                    <p>Find features mentioned in competitor App Store reviews that your app currently lacks. Turn market gaps into your competitive advantage and unique selling proposition.</p>
+                    <p>Find features your app lacks and feature requests in competitor reviews. Turn gaps into competitive advantages.</p>
                 </div>
                 <div class="value-card">
                     <h3>
@@ -770,13 +770,6 @@
                         Pain Point Analysis
                     </h3>
                     <p>Identify features that users complain about in competitor apps' App Store reviews. Solving these pain points can give you a competitive edge and win over frustrated users.</p>
-                </div>
-                <div class="value-card">
-                    <h3>
-                        <div class="value-icon">💡</div>
-                        Feature Request Insights
-                    </h3>
-                    <p>Discover App Store reviews where users are asking for new features or improvements. This can directly inform your product roadmap with validated demand.</p>
                 </div>
                 <div class="value-card">
                     <h3>
