fix the hero section

--- a/land1/index.html
+++ b/land1/index.html
@@ -645,8 +645,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Stop Guessing.<br>Build What Users Already Proved They Want.</h1>
-                <p class="subheadline">Select competitor apps from the App Store and get comprehensive analysis of their App Store reviews: sentiment analysis, trend identification, gap discovery, and actionable insights to inform your product roadmap. Plus CSV exports for your own further analysis.</p>
+                <h1>Validate Your Product Ideas Before You Build</h1>
+                <p class="subheadline">Analyze competitor App Store reviews to understand user sentiment, discover gaps, and validate ideas. Get insights in minutes, not months.</p>
                 
                 <form class="email-form" name="early-access-hero" netlify netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <p class="hidden">
