--- a/land1/index.html
+++ b/land1/index.html
@@ -662,7 +662,7 @@
                 <h1>Validate Your Product Ideas Before You Build</h1>
                 <p class="subheadline">Analyze competitor App Store reviews to understand user sentiment, discover gaps, and validate ideas. Get insights in minutes, not months.</p>
                 
-                <form class="email-form" name="early-access-hero" netlify netlify-honeypot="bot-field" method="POST" data-netlify="true">
+                <form class="email-form" name="early-access-hero" netlify netlify-honeypot="bot-field" method="POST" data-netlify="true" target="_blank">
                     <p class="hidden">
                       <label>
                         Don't fill this out if you're human: <input name="bot-field" type="text" />
@@ -846,7 +846,7 @@
                 <p class="subheader">We Help You Learn From Their App Store Reviews.</p>
                 
                 <div class="email-capture">
-                    <form method="POST" class="email-form" name="early-access-cta" netlify netlify-honeypot="bot-field" data-netlify="true">
+                    <form method="POST" class="email-form" name="early-access-cta" netlify netlify-honeypot="bot-field" data-netlify="true" target="_blank">
                         <p class="hidden">
                           <label>
                             Don't fill this out if you're human: <input name="bot-field" type="text" />
