--- a/land1/index.html
+++ b/land1/index.html
@@ -669,7 +669,7 @@
                       </label>
                     </p>
                     <input type="email" name="email" class="email-input" placeholder="Enter your email" required>
-                    <button type="submit" class="btn-primary">Get Early Access</button>
+                    <button class="btn-primary">Get Early Access</button>
                 </form>
                 <div class="form-success" id="hero-form-success">
                     ✓ Thanks! We'll notify you when we launch.
@@ -853,7 +853,7 @@
                           </label>
                         </p>
                         <input type="email" name="email" class="email-input" placeholder="Enter your email" required>
-                        <button type="submit" class="btn-primary">Get Early Access</button>
+                        <button class="btn-primary">Get Early Access</button>
                     </form>
                     <div class="form-success" id="cta-form-success">
                         ✓ Thanks! We'll notify you when we launch.
